--- a/VassiatShahid.html
+++ b/VassiatShahid.html
@@ -147,7 +147,7 @@
   <!-- صفحه خوش‌آمدگویی -->
   <div class="welcome" id="welcome-screen">
     <h1>به صفحه وصیت شهید خوش آمدید</h1>
-    <p>برای ورود و پخش موسیقی زمینه، روی دکمه زیر کلیک کنید.</p>
+    <p>برای ورود و مطالعه وصیت، روی دکمه زیر کلیک کنید.</p>
     <button id="enter-btn">ادامه</button>
   </div>
 
