--- a/ShahidNooriBotons.html
+++ b/ShahidNooriBotons.html
@@ -59,8 +59,8 @@
 <h1>🌹 به یاد شهید قهرمان 🌹</h1>
 
 <div class="button-container">
-  <button class="btn album" onclick="window.open('https://ibrahimhadi-tech.github.io/salavat-counter/album.html','_blank')">آلبوم تصاویر شهید</button>
-  <button class="btn will" onclick="alert('لینک وصیت‌نامه در حال آماده‌سازی است')">وصیت‌نامه شهید</button>
+  <button class="btn album" onclick="window.open('https://aloneprogrammer-tech.github.io/YadmaneShahid/VassiatShahid.html','_blank')">آلبوم تصاویر شهید</button>
+  <button class="btn will" onclick="window.open('https://aloneprogrammer-tech.github.io/YadmaneShahid/VassiatShahid.html','_blank')">وصیت‌نامه شهید</button>
 
   <!-- دو دکمه جدید -->
   <button class="btn quran" onclick="window.open('https://www.delgarm.com/quran/','_blank')">قرآن آنلاین</button>
