--- a/ShahidNooriBotons.html
+++ b/ShahidNooriBotons.html
@@ -68,7 +68,7 @@
 
   <button class="btn ashura" onclick="window.open('https://edge72.517821.ir.cdn.ir/download/ziarat_ashora/ziarat_ashora_Farahmand_www.Ashora.ir.mp3','_blank')">زیارت عاشورا</button>
   <button class="btn martyrs" onclick="window.open('https://navideshahed.com/files/fa/news/1398/12/27/495040_186.mp3','_blank')">زیارت شهدا</button>
-  <button class="btn madahi" onclick="window.open('https://ibrahimhadi-tech.github.io/salavat-counter/madahi.html','_blank')">مداحی</button>
+  <button class="btn madahi" onclick="window.open('https://aloneprogrammer-tech.github.io/YadmaneShahid/Madddahi.html','_blank')">مداحی</button>
   <button class="btn note" onclick="window.open('https://shohada21.blogsky.com/1404/08/15/post-4/','_blank')">ثبت دلنوشته</button>
 </div>
 
