--- a/GameTest.html
+++ b/GameTest.html
@@ -1,155 +1,159 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>بازی پریدن و حرکت کردن</title>
-  <style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>بازی تیراندازی لمسی</title>
+<style>
     body {
-      margin: 0;
-      background: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-      color: white;
-      font-family: sans-serif;
+        margin: 0;
+        overflow: hidden;
+        background: #111;
+        touch-action: none; /* مهم برای کنترل لمسی */
     }
     canvas {
-      background: #222;
-      border: 3px solid #fff;
+        background: #222;
+        display: block;
+        margin: auto;
+        border: 2px solid #fff;
     }
-  </style>
+</style>
 </head>
 <body>
-  <canvas id="game" width="700" height="300"></canvas>
-  <script>
-    const canvas = document.getElementById("game");
-    const ctx = canvas.getContext("2d");
 
-    let player = {
-      x: 50,
-      y: 220,
-      w: 30,
-      h: 40,
-      dy: 0,
-      jumpPower: -12,
-      gravity: 0.6,
-      onGround: true,
-      speed: 4
-    };
+<canvas id="game" width="700" height="400"></canvas>
 
-    let obstacles = [];
-    let frame = 0;
-    let score = 0;
+<script>
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
 
-    function spawnObstacle() {
-      // اندازه و ارتفاع موانع را می‌توان اینجا تغییر داد
-      const h = 20 + Math.floor(Math.random() * 40);
-      obstacles.push({ x: canvas.width, y: 260 - h, w: 30, h: h });
-    }
+// بازیکن
+let player = {
+    x: 50,
+    y: 180,
+    w: 40,
+    h: 40,
+};
 
-    function update() {
-      frame++;
-      // هر ~2 ثانیه یک مانع بساز (60fps حدودا 120 فریم)
-      if (frame % 120 === 0) spawnObstacle();
+// گلوله‌ها
+let bullets = [];
 
-      // حرکت افقی با کلیدهای جهتی
-      if (keys.ArrowRight || keys['Right']) player.x += player.speed;
-      if (keys.ArrowLeft || keys['Left']) player.x -= player.speed;
+// دشمن‌ها
+let enemies = [];
+let frame = 0;
+let score = 0;
 
-      // محدودیت در صفحه
-      if (player.x < 0) player.x = 0;
-      if (player.x + player.w > canvas.width) player.x = canvas.width - player.w;
+// ساخت دشمن
+function spawnEnemy() {
+    let size = 30 + Math.random() * 20;
+    enemies.push({
+        x: canvas.width,
+        y: Math.random() * (canvas.height - size),
+        w: size,
+        h: size,
+        speed: 2 + Math.random() * 3
+    });
+}
 
-      // گرانش و پرش
-      player.y += player.dy;
-      if (!player.onGround) player.dy += player.gravity;
+// شلیک گلوله
+function shoot() {
+    bullets.push({
+        x: player.x + player.w,
+        y: player.y + player.h / 2 - 5,
+        w: 10,
+        h: 10
+    });
+}
 
-      // برخورد با زمین (خط زمین در y = 220)
-      if (player.y >= 220) {
-        player.y = 220;
-        player.dy = 0;
-        player.onGround = true;
-      }
+// لمس برای حرکت دادن بازیکن
+canvas.addEventListener("touchmove", function (e) {
+    let t = e.touches[0];
+    let rect = canvas.getBoundingClientRect();
 
-      // حرکت موانع و چک برخورد
-      for (let i = obstacles.length - 1; i >= 0; i--) {
-        let o = obstacles[i];
-        o.x -= 4;
+    player.y = t.clientY - rect.top - player.h / 2;
 
-        // حذف موانع پس از خروج از صفحه برای جلوگیری از انباشت
-        if (o.x + o.w < 0) obstacles.splice(i, 1);
+    // محدودیت
+    if (player.y < 0) player.y = 0;
+    if (player.y + player.h > canvas.height) player.y = canvas.height - player.h;
 
-        // بررسی برخورد ساده مستطیلی
+    e.preventDefault();
+});
+
+// لمس برای شلیک
+canvas.addEventListener("touchstart", function () {
+    shoot();
+});
+
+// آپدیت بازی
+function update() {
+    frame++;
+
+    if (frame % 60 === 0) spawnEnemy();
+
+    // حرکت گلوله
+    bullets.forEach((b, i) => {
+        b.x += 8;
+        if (b.x > canvas.width) bullets.splice(i, 1);
+    });
+
+    // حرکت دشمن‌ها
+    enemies.forEach((en, i) => {
+        en.x -= en.speed;
+
+        // برخورد گلوله با دشمن
+        bullets.forEach((b, j) => {
+            if (
+                b.x < en.x + en.w &&
+                b.x + b.w > en.x &&
+                b.y < en.y + en.h &&
+                b.y + b.h > en.y
+            ) {
+                enemies.splice(i, 1);
+                bullets.splice(j, 1);
+                score++;
+            }
+        });
+
+        // برخورد دشمن با بازیکن = باخت
         if (
-          player.x < o.x + o.w &&
-          player.x + player.w > o.x &&
-          player.y < o.y + o.h &&
-          player.y + player.h > o.y
+            player.x < en.x + en.w &&
+            player.x + player.w > en.x &&
+            player.y < en.y + en.h &&
+            player.y + player.h > en.y
         ) {
-          // باخت — می‌تونی اینجا به جای reload نمایش منو یا دکمه دوباره شروع بذاری
-          alert("باختی! امتیاز: " + score);
-          document.location.reload();
-          return;
+            alert("باختی! امتیاز: " + score);
+            document.location.reload();
         }
-      }
-
-      // امتیاز بر اساس فریم (می‌تونی بر اساس زمان واقعی هم حساب کنی)
-      score++;
-
-      draw();
-      requestAnimationFrame(update);
-    }
-
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      // بازیکن
-      ctx.fillStyle = "#0f0";
-      ctx.fillRect(player.x, player.y, player.w, player.h);
-
-      // موانع
-      ctx.fillStyle = "#f00";
-      for (let o of obstacles) {
-        ctx.fillRect(o.x, o.y, o.w, o.h);
-      }
-
-      // امتیاز
-      ctx.fillStyle = "#fff";
-      ctx.font = "20px Arial";
-      ctx.fillText("Score: " + score, 10, 25);
-
-      // خط زمین (نمایشی)
-      ctx.strokeStyle = "rgba(255,255,255,0.1)";
-      ctx.beginPath();
-      ctx.moveTo(0, 260);
-      ctx.lineTo(canvas.width, 260);
-      ctx.stroke();
-    }
-
-    // کنترل کلیدها
-    const keys = {};
-    document.addEventListener("keydown", e => {
-      keys[e.key] = true;
-      keys[e.code] = true;
-
-      // برای تشخیص دقیق کلید فاصله از e.code استفاده می‌کنیم
-      if ((e.code === "Space" || e.key === " ") && player.onGround) {
-        e.preventDefault(); // جلوگیری از اسکرول شدن صفحه هنگام فشردن اسپیس
-        player.dy = player.jumpPower;
-        player.onGround = false;
-      }
     });
 
-    document.addEventListener("keyup", e => {
-      keys[e.key] = false;
-      keys[e.code] = false;
-    });
+    draw();
+    requestAnimationFrame(update);
+}
 
-    // برای کنترل روی موبایل یا لمس می‌تونی ناحیه‌هایی اضافه کنیم — بگو اگه لازم داری
-    update();
-  </script>
+// رسم
+function draw() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    // بازیکن
+    ctx.fillStyle = "#0f0";
+    ctx.fillRect(player.x, player.y, player.w, player.h);
+
+    // گلوله
+    ctx.fillStyle = "#ff0";
+    bullets.forEach(b => ctx.fillRect(b.x, b.y, b.w, b.h));
+
+    // دشمن
+    ctx.fillStyle = "#f00";
+    enemies.forEach(en => ctx.fillRect(en.x, en.y, en.w, en.h));
+
+    // امتیاز
+    ctx.fillStyle = "#fff";
+    ctx.font = "20px Arial";
+    ctx.fillText("Score: " + score, 10, 25);
+}
+
+update();
+</script>
+
 </body>
 </html>
