--- a/GameTest.html
+++ b/GameTest.html
@@ -3,36 +3,66 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>بازی تیراندازی لمسی</title>
+<title>جنگ هواپیماها</title>
 <style>
     body {
         margin: 0;
         overflow: hidden;
         background: #111;
         touch-action: none; /* مهم برای کنترل لمسی */
+        font-family: sans-serif;
     }
     canvas {
-        background: #222;
         display: block;
         margin: auto;
         border: 2px solid #fff;
+        background: #222;
+    }
+    /* دکمه شلیک */
+    #shootBtn {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        background: #f00;
+        color: white;
+        font-size: 20px;
+        text-align: center;
+        line-height: 80px;
+        user-select: none;
+        z-index: 10;
     }
 </style>
 </head>
 <body>
 
 <canvas id="game" width="700" height="400"></canvas>
+<div id="shootBtn">🔫</div>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
+const shootBtn = document.getElementById("shootBtn");
+
+// تصاویر
+let playerImg = new Image();
+playerImg.src = 'assets/player.png';
+
+let enemyImg = new Image();
+enemyImg.src = 'assets/enemy1.png';
+
+let bulletImg = new Image();
+bulletImg.src = 'assets/bullet.png';
+
 // بازیکن
 let player = {
     x: 50,
     y: 180,
-    w: 40,
-    h: 40,
+    w: 60,
+    h: 60
 };
 
 // گلوله‌ها
@@ -45,13 +75,13 @@ let score = 0;
 
 // ساخت دشمن
 function spawnEnemy() {
-    let size = 30 + Math.random() * 20;
+    let size = 50;
     enemies.push({
         x: canvas.width,
         y: Math.random() * (canvas.height - size),
         w: size,
         h: size,
-        speed: 2 + Math.random() * 3
+        speed: 3 + Math.random() * 2
     });
 }
 
@@ -59,68 +89,62 @@ function spawnEnemy() {
 function shoot() {
     bullets.push({
         x: player.x + player.w,
-        y: player.y + player.h / 2 - 5,
-        w: 10,
-        h: 10
+        y: player.y + player.h / 2 - 10,
+        w: 20,
+        h: 20,
+        speed: 8
     });
 }
 
-// لمس برای حرکت دادن بازیکن
-canvas.addEventListener("touchmove", function (e) {
+// کنترل لمسی بازیکن
+canvas.addEventListener("touchmove", function(e){
     let t = e.touches[0];
     let rect = canvas.getBoundingClientRect();
-
-    player.y = t.clientY - rect.top - player.h / 2;
-
-    // محدودیت
-    if (player.y < 0) player.y = 0;
-    if (player.y + player.h > canvas.height) player.y = canvas.height - player.h;
-
+    player.y = t.clientY - rect.top - player.h/2;
+    if(player.y < 0) player.y = 0;
+    if(player.y + player.h > canvas.height) player.y = canvas.height - player.h;
     e.preventDefault();
 });
 
-// لمس برای شلیک
-canvas.addEventListener("touchstart", function () {
-    shoot();
-});
+// دکمه شلیک لمسی
+shootBtn.addEventListener("touchstart", shoot);
 
 // آپدیت بازی
 function update() {
     frame++;
-
-    if (frame % 60 === 0) spawnEnemy();
+    if(frame % 80 === 0) spawnEnemy();
 
     // حرکت گلوله
-    bullets.forEach((b, i) => {
-        b.x += 8;
-        if (b.x > canvas.width) bullets.splice(i, 1);
+    bullets.forEach((b,i)=>{
+        b.x += b.speed;
+        if(b.x > canvas.width) bullets.splice(i,1);
     });
 
-    // حرکت دشمن‌ها
-    enemies.forEach((en, i) => {
+    // حرکت دشمن
+    enemies.forEach((en,i)=>{
         en.x -= en.speed;
 
         // برخورد گلوله با دشمن
-        bullets.forEach((b, j) => {
-            if (
+        bullets.forEach((b,j)=>{
+            if(
                 b.x < en.x + en.w &&
                 b.x + b.w > en.x &&
                 b.y < en.y + en.h &&
                 b.y + b.h > en.y
-            ) {
-                enemies.splice(i, 1);
-                bullets.splice(j, 1);
+            ){
+                enemies.splice(i,1);
+                bullets.splice(j,1);
                 score++;
             }
         });
 
         // برخورد دشمن با بازیکن = باخت
-        if (
+        if(
             player.x < en.x + en.w &&
             player.x + player.w > en.x &&
             player.y < en.y + en.h &&
             player.y + player.h > en.y
-        ) {
+        ){
             alert("باختی! امتیاز: " + score);
             document.location.reload();
         }
@@ -131,20 +155,21 @@ function update() {
 }
 
 // رسم
-function draw() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+function draw(){
+    ctx.clearRect(0,0,canvas.width,canvas.height);
 
     // بازیکن
-    ctx.fillStyle = "#0f0";
-    ctx.fillRect(player.x, player.y, player.w, player.h);
+    ctx.drawImage(playerImg, player.x, player.y, player.w, player.h);
 
-    // گلوله
-    ctx.fillStyle = "#ff0";
-    bullets.forEach(b => ctx.fillRect(b.x, b.y, b.w, b.h));
+    // گلوله‌ها
+    bullets.forEach(b=>{
+        ctx.drawImage(bulletImg, b.x, b.y, b.w, b.h);
+    });
 
-    // دشمن
-    ctx.fillStyle = "#f00";
-    enemies.forEach(en => ctx.fillRect(en.x, en.y, en.w, en.h));
+    // دشمن‌ها
+    enemies.forEach(en=>{
+        ctx.drawImage(enemyImg, en.x, en.y, en.w, en.h);
+    });
 
     // امتیاز
     ctx.fillStyle = "#fff";
