--- a/GameTest.html
+++ b/GameTest.html
@@ -3,36 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>جنگ هواپیماها - عمودی</title>
+<title>جنگ هوایی عمودی</title>
 <style>
-    body {
-        margin: 0;
-        overflow: hidden;
-        background: #111;
-        font-family: sans-serif;
-    }
-    canvas {
-        display: block;
-        margin: 0 auto;
-        background: #222;
-    }
-    .btn {
-        position: fixed;
-        bottom: 20px;
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        background: rgba(255,0,0,0.8);
-        color: white;
-        font-size: 30px;
-        text-align: center;
-        line-height: 60px;
-        user-select: none;
-        z-index: 10;
-    }
-    #btnLeft { left: 20px; }
-    #btnRight { left: 100px; }
-    #shootBtn { right: 20px; bottom: 20px; }
+    body { margin:0; overflow:hidden; font-family:sans-serif; background:#111; }
+    canvas { display:block; margin:0 auto; }
+    .btn { position:fixed; bottom:20px; width:60px; height:60px; border-radius:50%; background:rgba(255,0,0,0.8); color:white; font-size:30px; text-align:center; line-height:60px; user-select:none; z-index:10; }
+    #btnLeft { left:20px; }
+    #btnRight { left:100px; }
+    #shootBtn { right:20px; bottom:20px; }
 </style>
 </head>
 <body>
@@ -45,43 +23,29 @@
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
-
-function resizeCanvas(){
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-}
+function resizeCanvas(){ canvas.width=window.innerWidth; canvas.height=window.innerHeight; }
 window.addEventListener('resize', resizeCanvas);
 resizeCanvas();
 
+// تصاویر
+let bgImg = new Image(); bgImg.src = 'assets/BackGround.png';
+let playerImg = new Image(); playerImg.src = 'assets/player.png';
+let enemyImg = new Image(); enemyImg.src = 'assets/Enemy.png';
+let bulletImg = new Image(); bulletImg.src = 'assets/Bullet.png';
+let boomImg = new Image(); boomImg.src = 'assets/BOOM.png';
+
+// صدا
+let gunSound = new Audio('assets/gun.mp3');
+
 // بازیکن
-let playerImg = new Image();
-playerImg.src = 'assets/player.png';
+let player = { x:canvas.width/2, y:canvas.height-200, w:100, h:100, speed:6 };
 
-let player = {
-    x: canvas.width/2,
-    y: canvas.height - 120,
-    w: 100,
-    h: 100,
-    speed: 6
-};
-
-// گلوله‌ها
-let bullets = [];
-
-// حرکت با دکمه
-let moveLeft = false;
-let moveRight = false;
+// گلوله‌ها و دشمن‌ها
+let bullets=[], enemies=[], explosions=[], score=0;
+let moveLeft=false, moveRight=false;
 
 // شلیک
-function shoot() {
-    bullets.push({
-        x: player.x - player.w/2 + 40,
-        y: player.y - 20,
-        w: 20,
-        h: 20,
-        speed: 10
-    });
-}
+function shoot(){ bullets.push({x:player.x+player.w/2-10,y:player.y-20,w:20,h:20,speed:10}); gunSound.currentTime=0; gunSound.play(); }
 
 // کنترل دکمه‌ها
 document.getElementById("btnLeft").addEventListener("touchstart", ()=>moveLeft=true);
@@ -90,40 +54,49 @@ document.getElementById("btnRight").addEventListener("touchstart", ()=>moveRight
 document.getElementById("btnRight").addEventListener("touchend", ()=>moveRight=false);
 document.getElementById("shootBtn").addEventListener("touchstart", shoot);
 
-// آپدیت
-function update() {
-    if(moveLeft) player.x -= player.speed;
-    if(moveRight) player.x += player.speed;
+// ساخت دشمن
+function spawnEnemy(){ let size=80; enemies.push({x:Math.random()*(canvas.width-size), y:-size, w:size, h:size, speed:2+Math.random()*2}); }
 
-    if(player.x - player.w/2 < 0) player.x = player.w/2;
-    if(player.x + player.w/2 > canvas.width) player.x = canvas.width - player.w/2;
+// آپدیت بازی
+let frame=0;
+function update(){
+    frame++; if(frame%100===0) spawnEnemy();
+    if(moveLeft) player.x-=player.speed;
+    if(moveRight) player.x+=player.speed;
+    if(player.x<0) player.x=0; if(player.x+player.w>canvas.width) player.x=canvas.width-player.w;
 
-    // حرکت گلوله‌ها
-    bullets.forEach((b,i)=>{
-        b.y -= b.speed;
-        if(b.y + b.h < 0) bullets.splice(i,1);
+    bullets.forEach((b,i)=>{ b.y-=b.speed; if(b.y+b.h<0) bullets.splice(i,1); });
+    enemies.forEach((en,i)=>{
+        en.y+=en.speed;
+        bullets.forEach((b,j)=>{
+            if(b.x<en.x+en.w && b.x+b.w>en.x && b.y<en.y+en.h && b.y+b.h>en.y){
+                explosions.push({x:en.x,y:en.y,w:en.w,h:en.h,frame:0});
+                enemies.splice(i,1); bullets.splice(j,1); score++;
+            }
+        });
+        if(player.x<en.x+en.w && player.x+player.w>en.x && player.y<en.y+en.h && player.y+player.h>en.y){
+            alert("باختی! امتیاز: "+score);
+            document.location.reload();
+        }
+        if(en.y>canvas.height) enemies.splice(i,1);
     });
-
+    explosions.forEach((ex,i)=>{ ex.frame++; if(ex.frame>20) explosions.splice(i,1); });
     draw();
     requestAnimationFrame(update);
 }
 
-// رسم با چرخش
+// رسم
 function draw(){
     ctx.clearRect(0,0,canvas.width,canvas.height);
-
-    // بازیکن چرخیده (نوک به بالا)
+    ctx.drawImage(bgImg,0,0,canvas.width,canvas.height);
     ctx.save();
-    ctx.translate(player.x, player.y + player.h/2); // مرکز برای چرخش
-    ctx.rotate(-Math.PI/2); // 90 درجه جهت عمودی
-    ctx.drawImage(playerImg, -player.w/2, -player.h/2, player.w, player.h);
-    ctx.restore();
-
-    // گلوله‌ها
-    ctx.fillStyle = "#ff0";
-    bullets.forEach(b=>{
-        ctx.fillRect(b.x, b.y, b.w, b.h);
-    });
+    ctx.translate(player.x+player.w/2,player.y+player.h/2);
+    ctx.rotate(-Math.PI/2);
+    ctx.drawImage(playerImg,-player.w/2,-player.h/2,player.w,player.h);
+    ctx.restore();bullets.forEach(b=>ctx.drawImage(bulletImg,b.x,b.y,b.w,b.h));
+    enemies.forEach(en=>ctx.drawImage(enemyImg,en.x,en.y,en.w,en.h));
+    explosions.forEach(ex=>ctx.drawImage(boomImg,ex.x,ex.y,ex.w,ex.h));
+    ctx.fillStyle="#fff"; ctx.font="20px Arial"; ctx.fillText("Score: "+score,10,30);
 }
 
 update();
