--- a/GameTest.html
+++ b/GameTest.html
@@ -40,23 +40,25 @@ function resizeCanvas(){ canvas.width=window.innerWidth; canvas.height=window.in
 window.addEventListener('resize', resizeCanvas);
 resizeCanvas();
 
-// تصاویر
+// تصاویر و صداها
 let bgImg = new Image(); bgImg.src = 'assets/BackGround.png';
 let playerImg = new Image(); playerImg.src = 'assets/player.png';
 let enemyImg = new Image(); enemyImg.src = 'assets/Enemy.png';
 let bulletImg = new Image(); bulletImg.src = 'assets/Bullet.png';
 let boomImg = new Image(); boomImg.src = 'assets/BOOM.png';
-
-// صدا
 let gunSound = new Audio('assets/gun.mp3');
 
 // بازیکن
-let player = { x:canvas.width/2, y:canvas.height-200, w:100, h:100, speed:6 };
+let player = { x:canvas.width/2, y:canvas.height-200, w:100, h:100, speed:6, lives:5 };
+
 // گلوله‌ها و دشمن‌ها
-let bullets=[], enemies=[], explosions=[], score=0;
+let bullets=[], enemies=[], explosions=[], enemyBullets=[];
+let score=0, startTime=0, lastDifficultyTime=0, enemyShotEnable=false, enemiesPassed=0;
+
+// دکمه‌ها
 let moveLeft=false, moveRight=false;
 
-// شلیک
+// شلیک بازیکن
 function shoot(){ bullets.push({x:player.x+player.w/2-10,y:player.y-20,w:20,h:20,speed:10}); gunSound.currentTime=0; gunSound.play(); }
 
 // کنترل دکمه‌ها
@@ -70,11 +72,10 @@ document.getElementById("shootBtn").addEventListener("touchstart", shoot);
 const loadingScreen = document.getElementById('loadingScreen');
 const startBtn = document.getElementById('startBtn');
 setTimeout(()=>{ startBtn.style.display='block'; },5000);
-let startTime = 0;
 startBtn.addEventListener('click', ()=>{
     loadingScreen.style.display='none';
     startTime = Date.now();
-    update(); // شروع بازی
+    update();
 });
 
 // ساخت دشمن
@@ -87,13 +88,15 @@ function spawnEnemy(){
     }
 }
 
-// سختی افزایشی
-let lastDifficultyTime = 0;
+// شلیک دشمن
+function enemyShoot(enemy){
+    enemyBullets.push({x:enemy.x+enemy.w/2-5, y:enemy.y+enemy.h, w:10, h:20, speed:6});
+}
 
 // آپدیت بازی
 let frame=0;
 function update(){
-    frame++; 
+    frame++;
     if(frame%100===0) spawnEnemy();
 
     // افزایش سختی هر 10 ثانیه
@@ -103,32 +106,57 @@ function update(){
             enemySpeedBase += 0.5;
             enemyCountBase += 1;
             lastDifficultyTime = elapsed;
+            enemyShotEnable = true; // بعد از 10 ثانیه دشمن‌ها شلیک می‌کنند
         }
     }
-
     // حرکت بازیکن
     if(moveLeft) player.x-=player.speed;
     if(moveRight) player.x+=player.speed;
-    if(player.x<0) player.x=0; if(player.x+player.w>canvas.width) player.x=canvas.width-player.w;// حرکت گلوله‌ها
+    if(player.x<0) player.x=0; 
+    if(player.x+player.w>canvas.width) player.x=canvas.width-player.w;
+
+    // حرکت گلوله‌ها
     bullets.forEach((b,i)=>{ b.y-=b.speed; if(b.y+b.h<0) bullets.splice(i,1); });
 
-    // حرکت دشمن‌ها و برخورد
+    // حرکت دشمن‌ها
     enemies.forEach((en,i)=>{
         en.y+=en.speed;
+
+        // اگر از خط پشت بازیکن عبور کرد
+        if(en.y + en.h > player.y+player.h+50){ // 50 پیکسل عقب‌تر
+            enemiesPassed++;
+            enemies.splice(i,1);
+            if(enemiesPassed>=3){ alert("باختی! امتیاز: "+score); document.location.reload(); }
+            return;
+        }
+
+        // شلیک دشمن
+        if(enemyShotEnable && Math.random()<0.01){ enemyShoot(en); }
+
+        // برخورد گلوله بازیکن با دشمن
         bullets.forEach((b,j)=>{
             if(b.x<en.x+en.w && b.x+b.w>en.x && b.y<en.y+en.h && b.y+b.h>en.y){
                 explosions.push({x:en.x,y:en.y,w:en.w,h:en.h,frame:0});
                 enemies.splice(i,1); bullets.splice(j,1); score++;
             }
         });
-        if(player.x<en.x+en.w && player.x+player.w>en.x && player.y<en.y+en.h && player.y+player.h>en.y){
-            alert("باختی! امتیاز: "+score);
-            document.location.reload();
-        }
-        if(en.y>canvas.height) enemies.splice(i,1);
+
+        // برخورد با بازیکن توسط دشمن
+        enemyBullets.forEach((eb,k)=>{
+            if(eb.x<player.x+player.w && eb.x+eb.w>player.x && eb.y<player.y+player.h && eb.y+eb.h>player.y){
+                player.lives--;
+                enemyBullets.splice(k,1);
+                if(player.lives<=0){ alert("باختی! امتیاز: "+score); document.location.reload(); }
+            }
+        });
     });
 
+    // حرکت گلوله دشمن
+    enemyBullets.forEach((eb,i)=>{ eb.y+=eb.speed; if(eb.y>canvas.height) enemyBullets.splice(i,1); });
+
+    // انفجار
     explosions.forEach((ex,i)=>{ ex.frame++; if(ex.frame>20) explosions.splice(i,1); });
+
     draw();
     requestAnimationFrame(update);
 }
@@ -137,16 +165,42 @@ function update(){
 function draw(){
     ctx.clearRect(0,0,canvas.width,canvas.height);
     ctx.drawImage(bgImg,0,0,canvas.width,canvas.height);
+
+    // خط چین پشت بازیکن (حریم)
+    ctx.strokeStyle="yellow";
+    ctx.setLineDash([5,5]);
+    ctx.strokeRect(player.x-50, player.y+player.h+50, player.w+100, 20);
+    ctx.setLineDash([]);
+
+    // بازیکن
     ctx.save();
     ctx.translate(player.x+player.w/2,player.y+player.h/2);
     ctx.rotate(-Math.PI/2);
     ctx.drawImage(playerImg,-player.w/2,-player.h/2,player.w,player.h);
     ctx.restore();
+
+    // گلوله‌ها
     bullets.forEach(b=>ctx.drawImage(bulletImg,b.x,b.y,b.w,b.h));
+    enemyBullets.forEach(eb=>{
+        ctx.fillStyle="red"; ctx.fillRect(eb.x,eb.y,eb.w,eb.h);
+    });
+
+    // دشمن‌ها
     enemies.forEach(en=>ctx.drawImage(enemyImg,en.x,en.y,en.w,en.h));
+
+    // انفجار
     explosions.forEach(ex=>ctx.drawImage(boomImg,ex.x,ex.y,ex.w,ex.h));
+
+    // امتیاز
     ctx.fillStyle="#fff"; ctx.font="20px Arial"; ctx.fillText("Score: "+score,10,30);
+
+    // جان‌ها
+    for(let i=0;i<5;i++){
+        ctx.fillStyle = i<player.lives?"red":"black";
+        ctx.fillRect(10+i*25,50,20,20);
+    }
 }
+
 </script>
 
 </body>
