--- a/GameTest.html
+++ b/GameTest.html
@@ -18,12 +18,15 @@
     #startBtn {
         margin-top:20px; padding:10px 20px; font-size:18px; background:#f00; border:none; color:white; border-radius:5px; display:none;
     }
+    #poweredBy {
+        position:fixed; bottom:5px; right:10px; color:white; font-size:14px; font-family:sans-serif;
+    }
 </style>
 </head>
 <body>
 
 <div id="loadingScreen">
-    <div>لطفا چند ثانیه صبر کنید...</div>
+    <div id="loadingText">لطفا چند لحظه صبر کنید...</div>
     <button id="startBtn">شروع بازی</button>
 </div>
 
@@ -31,6 +34,7 @@
 <div class="btn" id="btnLeft">◀</div>
 <div class="btn" id="btnRight">▶</div>
 <div class="btn" id="shootBtn">🔫</div>
+<div id="poweredBy">powered by Floki ❤️</div>
 
 <script>
 // Canvas
@@ -71,10 +75,19 @@ document.getElementById("shootBtn").addEventListener("touchstart", shoot);
 // لودینگ
 const loadingScreen = document.getElementById('loadingScreen');
 const startBtn = document.getElementById('startBtn');
+const loadingText = document.getElementById('loadingText');
+let firstLoad = true;
 setTimeout(()=>{ startBtn.style.display='block'; },5000);
+
 startBtn.addEventListener('click', ()=>{
     loadingScreen.style.display='none';
     startTime = Date.now();
+    enemiesPassed = 0;
+    player.lives = 5;
+    bullets=[]; enemies=[]; enemyBullets=[]; explosions=[]; score=0; lastDifficultyTime=0;
+    enemySpeedBase = 2;
+    enemyCountBase = 1;
+    enemyShotEnable = false;
     update();
 });
 
@@ -87,8 +100,7 @@ function spawnEnemy(){
         enemies.push({x:Math.random()*(canvas.width-size), y:-size, w:size, h:size, speed:enemySpeedBase + Math.random()*2});
     }
 }
-
-// شلیک دشمن
+    // شلیک دشمن
 function enemyShoot(enemy){
     enemyBullets.push({x:enemy.x+enemy.w/2-5, y:enemy.y+enemy.h, w:10, h:20, speed:6});
 }
@@ -96,19 +108,24 @@ function enemyShoot(enemy){
 // آپدیت بازی
 let frame=0;
 function update(){
-    frame++;
+    frame++; 
     if(frame%100===0) spawnEnemy();
 
-    // افزایش سختی هر 10 ثانیه
     if(startTime){
         let elapsed = (Date.now() - startTime)/1000;
-        if(elapsed - lastDifficultyTime >= 10){
-            enemySpeedBase += 0.5;
-            enemyCountBase += 1;
-            lastDifficultyTime = elapsed;
-            enemyShotEnable = true; // بعد از 10 ثانیه دشمن‌ها شلیک می‌کنند
+
+        // افزایش سختی مرحله‌ای
+        if((elapsed>0 && elapsed<=10) && lastDifficultyTime==0){
+            enemySpeedBase += 0.5; enemyCountBase += 1; lastDifficultyTime=1;
+        } else if((elapsed>10 && elapsed<=30) && lastDifficultyTime==1){
+            enemySpeedBase += 0.5; enemyCountBase += 1; lastDifficultyTime=2;
+        } else if(elapsed>30 && elapsed/10 >= lastDifficultyTime){
+            enemySpeedBase += 0.5; enemyCountBase += 1; lastDifficultyTime = Math.floor(elapsed/10)+1;
         }
+
+        if(elapsed>10) enemyShotEnable = true;
     }
+
     // حرکت بازیکن
     if(moveLeft) player.x-=player.speed;
     if(moveRight) player.x+=player.speed;
@@ -122,11 +139,16 @@ function update(){
     enemies.forEach((en,i)=>{
         en.y+=en.speed;
 
-        // اگر از خط پشت بازیکن عبور کرد
-        if(en.y + en.h > player.y+player.h+50){ // 50 پیکسل عقب‌تر
+        // خط پشت بازیکن (مرز)
+        let boundaryY = player.y+player.h+50;
+        if(en.y + en.h > boundaryY){
             enemiesPassed++;
             enemies.splice(i,1);
-            if(enemiesPassed>=3){ alert("باختی! امتیاز: "+score); document.location.reload(); }
+            if(enemiesPassed>=3){
+                loadingScreen.style.display='flex';
+                loadingText.innerText='بازی مجدد';
+                startBtn.style.display='block';
+            }
             return;
         }
 
@@ -141,12 +163,16 @@ function update(){
             }
         });
 
-        // برخورد با بازیکن توسط دشمن
+        // برخورد با بازیکن توسط تیر دشمن
         enemyBullets.forEach((eb,k)=>{
             if(eb.x<player.x+player.w && eb.x+eb.w>player.x && eb.y<player.y+player.h && eb.y+eb.h>player.y){
                 player.lives--;
                 enemyBullets.splice(k,1);
-                if(player.lives<=0){ alert("باختی! امتیاز: "+score); document.location.reload(); }
+                if(player.lives<=0){
+                    loadingScreen.style.display='flex';
+                    loadingText.innerText='بازی مجدد';
+                    startBtn.style.display='block';
+                }
             }
         });
     });
@@ -166,10 +192,10 @@ function draw(){
     ctx.clearRect(0,0,canvas.width,canvas.height);
     ctx.drawImage(bgImg,0,0,canvas.width,canvas.height);
 
-    // خط چین پشت بازیکن (حریم)
+    // خط‌چین ثابت پشت بازیکن
     ctx.strokeStyle="yellow";
     ctx.setLineDash([5,5]);
-    ctx.strokeRect(player.x-50, player.y+player.h+50, player.w+100, 20);
+    ctx.strokeRect(0, player.y+player.h+50, canvas.width, 20);
     ctx.setLineDash([]);
 
     // بازیکن
@@ -200,7 +226,6 @@ function draw(){
         ctx.fillRect(10+i*25,50,20,20);
     }
 }
-
 </script>
 
 </body>
